It compiles